--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/iconsSkills/
     - assets/IconsSocialNetwork/
   #   - images/a_dot_ham.jpeg
 
