--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
-  infinite_carousel: ^1.0.1
+  finite_coverflow: ^1.0.0
+  # infinite_carousel: ^1.0.1
+  # carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
