--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   finite_coverflow: ^1.0.0
+  url_launcher: ^6.0.9
   # infinite_carousel: ^1.0.1
   # carousel_slider: ^4.0.0
 
